--- a/css/header.css
+++ b/css/header.css
@@ -197,7 +197,9 @@
 
 /* ================= PHONE ================= */
 
-@media (hover: none) and (pointer: coarse) {
+@media 
+  (hover: none) and (pointer: coarse),
+  (max-width: 768px) {
 
 .site-header {
   position: fixed;
