--- a/css/index.css
+++ b/css/index.css
@@ -262,16 +262,15 @@ body {
 
 .editorial-text {
   position: absolute;
-  margin-top: 480px;
+  top: 0;
+  margin-top: calc(30% + 120px);
   left: 50%;
   transform: translateX(-50%);
-  z-index: 3;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   text-align: center;
   color: #ffffff;
 }
+
 
 .editorial-text h2 {
   font-family: 'Playfair Display', serif;
