--- a/css/index.css
+++ b/css/index.css
@@ -460,16 +460,16 @@ body {
     object-fit: cover;
   }
 
- .editorial-text {
-  position: absolute;
-  top: 0;
-  margin-top: calc(30% + 460px);
-  left: 50%;
-  transform: translateX(-50%);
-  align-items: center;
-  text-align: center;
-  color: #ffffff;
-}
+  .editorial-text {
+    position: relative;
+    margin: 0;
+    left: auto;
+    transform: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
   .editorial-text h2 {
     font-size: 0.95rem;
