--- a/css/forgotpassword.css
+++ b/css/forgotpassword.css
@@ -1,10 +1,26 @@
+/* =============== FONTS ====================*/
 
-    @font-face {
+@font-face {
+  font-family: 'horizon';
+  src: url('../fonts/horizon.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'horizonoutlined';
+  src: url('../fonts/horizon_outlined.otf') format('opentype');
+}
+
+@font-face {
   font-family: 'sf';
   src: url('../fonts/sf.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
 }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url('../fonts/PlayfairDisplay.ttf') format('opentype');
+}
+
+/* =============== PC ====================*/
 
     * {
       margin: 0;
@@ -112,6 +128,8 @@
       color: #000;
       text-decoration: underline;
     }
+
+  /* =============== PHONE ====================*/
 
      @media (hover: none) and (pointer: coarse) {
    
