--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'horizonoutlined';
-  font-size: 110px;
+  font-size: 130px;
   letter-spacing: 12px;
   text-transform: uppercase;
   text-align: center;
@@ -255,23 +255,38 @@ body {
 
   /* ================= PRODUCTS ================= */
 
-  .category-section {
-   margin-top: 80px;
-   margin-bottom: 40px;
-   padding-inline: 6vw;
-   text-align: center;
-  }
 
-  #products-section {
-    padding: 80px 6vw;
-  }
+.category-section {
+  margin-top: 80px;
+  margin-bottom: 70px;
+  padding-inline: 6vw;
+  text-align: center;
+}
 
-  .section-title {
-    font-size: 0.75rem;
-    letter-spacing: 4px;
-    margin-bottom: 48px;
-    margin-top: -30px;
-  }
+.section-title {
+  text-align: center;
+  font-family: 'sf';
+  font-size:0.6rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  margin-bottom: 80px;
+  opacity: 0.8;
+  display: inline-block;
+  padding: 14px 20px;
+  border: 1px solid rgba(0, 0, 0, 0.35);
+  background: transparent;
+}
+
+.section-subtitle {
+  text-align: center;
+  font-family: 'sf';
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  letter-spacing: 2px;
+  opacity: 0.7;
+  margin-top: -60px;
+  margin-bottom:40px;
+}
 
   .product-grid {
   grid-template-columns: repeat(2, 1fr);
